[package]
name = "foo"
version = "0.0.1"
edition = "2021"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.5.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "v0.5.0" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "v0.5.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "v0.5.0" }
serde_json = "1.0.116"

