[package]
name = "foo"
version = "0.0.1"
edition = "2021"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.6.6" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "v0.6.6" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "v0.6.6" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "v0.6.6" }
serde_json = "1.0.116"

